--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
-#
+
     - name: Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -34,7 +34,7 @@ jobs:
       run: npm run build
 
     - name: Generate deployment package
-      run: zip -r deploy.zip dist
+      run: zip -r deploy.zip dist package.json yarn.lock
 
     - name: Get timestamp
       uses: gerred/actions/current-time@master
